Enhance device management and validation features
- Added `Readings` property to `DeviceReadDTO`.
- Improved error handling in `DeviceRepository` for unique name violations.
- Renamed `Update` to `UpdateAsync` in `DeviceRepository` and `IRepository<T>`.
- Introduced `DeviceUpdateValidator` and updated `DeviceService` for device updates.
- Updated `DeviceController` to support new PATCH method for device updates.
- Added `UniqueConstraintException` for handling unique constraint violations.
- Enhanced Swagger documentation with XML comments.
- Created `DeviceUpdateDTO` for device property updates.
- Generated XML documentation file for API.

--- a/API/maisAgua/maisAgua.csproj
+++ b/API/maisAgua/maisAgua.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	<!--Adicionado para habilitar a leitura do xml pelo swagger. Ver mais detalhes em program.cs-->
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
