connection + final deliverables

--- a/API/maisAgua/.env
+++ b/API/maisAgua/.env
@@ -1,1 +1,1 @@
-ConnectionString__Postgre=Host=db.frntyrriiwnwlxiprcfy.supabase.co;Database=postgres;Username=postgres;Password=prisma.code#3;SSL Mode=Require;Trust Server Certificate=true
+ConnectionString__Oracle=Data Source=oracle.fiap.com.br:1521/orcl;User Id=RM554456;Password=080995;
